# crossed-effects

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
demos/: crossed_linear_insteval.ipynb  crossed_logit_gg.ipynb  crossed_mvlogit_cis.ipynb
demos/data/: gg.csv  insteval.csv
paper/: collapsed_vs_vanilla.ipynb  crossed_approx_benchmark.ipynb  crossed_approx_demo.ipynb  crossed_exact_benchmark.ipynb  crossed_exact_demo.ipynb  crossed_unid.ipynb  election_advi_vs_xfx.ipynb  gibbs_simstudy.ipynb  logit_elections.ipynb  mlogit_benchmark_elections.ipynb  mlogit_ident_elections.ipynb
paper/stan/: xfx_mvlogit2.stan
tests/: test_glm.py  test_lm.py  test_mixglm.py  test_mixmvglm.py  test_mvglm.py  test_olm.py
xfx/custom/: binomial.py  symmetric_multinomial.py
xfx/generic/: mv_1o_met.py  mv_2o_met.py  mv_conjugate.py  reg_conjugate.py  uv_2o_met.py  uv_conjugate.py
xfx/glm/: binomial.py  custom_pg_binomial.py  gaussian.py  generic.py  gibbs.py  metropolis.py  poisson.py
xfx/lm/: gibbs.py  iid.py
xfx/misc/: linalg.py  plot.py
xfx/mixglm/: binomial.py  custom_pg_binomial.py  gaussian.py  gibbs.py  poisson.py
xfx/mixmvglm/: custom_fmult.py  fmult.py  generic.py  gibbs.py
xfx/mvglm/: cmult.py  custom_fmult.py  fmult.py  generic.py  gibbs.py  metropolis.py  multinomial.py  mvgaussian.py
xfx/olm/: clog.py  gibbs.py  logit.py
