[project]
name = "xfx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polyagamma>=2.0.2",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "paper*", "demos*"]
